fix: component z-index level

--- a/packages/vue/components/select/index.less
+++ b/packages/vue/components/select/index.less
@@ -119,7 +119,7 @@
   }
   &__dropdown {
     position: absolute;
-    z-index: 200;
+    z-index: 1002;
     width: 100%;
     background-color: var(--primary-background);
     border-radius: var(--fect-radius);
