--- a/packages/vue/components/toast/index.less
+++ b/packages/vue/components/toast/index.less
@@ -50,7 +50,7 @@
     max-width: 90vw;
     bottom: var(--fect-gap);
     right: var(--fect-gap);
-    z-index: 2000;
+    z-index: 1001;
     transition: all 400ms ease;
     box-sizing: border-box;
     &.hover {
